--- a/src/Sitecore.Support.177158/Sitecore.Support.177158.csproj
+++ b/src/Sitecore.Support.177158/Sitecore.Support.177158.csproj
@@ -47,7 +47,8 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="Sitecore.Mvc, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sitecore.Mvc.NoReferences.8.2.170407\lib\NET452\Sitecore.Mvc.dll</HintPath>
+      <HintPath>..\packages\SC.Sitecore.Mvc.8.2.3\lib\Sitecore.Mvc.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
